# fastapi_mvc_app

./: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  server.py  wait-for-mongo.sh
controllers/: contact_controller.py
database/: database.py
models/: contact_model.py
nginx/conf.d/: BACKUP_SUMMARY.txt  QUICK_SETUP_GUIDE.md  README.md  default.conf  docker-compose.yml
routes/: contact_routes.py  view_routes.py
ssl-config/: certbot-renew.sh  crontab-backup.txt
utils/: helper.py
views/: form.html  index.html  show.html
views/partials/: head.html  navbar.html
